[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

bytes = "1"
httparse = "1"

futures-util = "0.3.31"

rcgen = { version = "0.14", features = ["crypto", "pem", "x509-parser"] }

dns-lookup = "3"
tls-parser = "0.12"
tokio-stream = "0.1.18"
reqwest = "0.13.2"
async_from = "0.2.0"
tokio-rustls = "0.26.4"
# rustls = "0.23.39"
